# streamlit_modular_auth

./: .gitignore  .pre-commit-config.yaml  README copy.md  README.md  app.py  custom-user-storage-notes.md  custom_functionality.md  dev-requirements.txt  page.py  page.py_bak  pyproject.toml  requirements.txt  scratch.py  setup.py  test-requirements.txt  test.py
dev/: _utils.py  auth_cookies.py  extras.py
samples/: SQLModel Sample README.md  dbmodel_storage.py  default.py  default_oracle.py  default_postgres.py  default_sqlite.py  forgot_password_gmail.py  hide_account_managment.py  hide_registration.py  ldap_auth.py  password_reset_gmail.py
samples/default_fastapi_admin/: Home.py  config.py
samples/default_postgres_admin/: Home.py
samples/default_sqlite_admin/: Home.py  config.py
samples/default_sqlite_admin/pages/: Admin.py
samples/sqlmodel_user_storage/handlers/: DiskCacheAuthCookies.py  auth.py
samples/sqlmodel_user_storage/pages/: AdminPage.py
samples/temp_app/: Home.py
samples/temp_app/apps/: home.py  page1.py
samples/temp_app/pages/: Page1.py
src/: cli.py
src/streamlit_modular_auth/: __init__.py  _cookie_manager.py  _handlers.py  _utils.py  protocols.py
src/streamlit_modular_auth/_core/: config.py  login.py  views.py
src/streamlit_modular_auth/_legacy/: widgets.py
src/streamlit_modular_auth/handlers/: auth_cookies.py  authentication.py  database_storage.py  forgot_password_msg.py  json_storage.py  storage.py
src/streamlit_modular_auth/protocol_validation/: auth.py  auth_cookies.py  storage.py
src/template_app/src/: Home.py
src/template_app_custom/src/: config.py
streamlit_login_auth_ui/: __init__.py  _backwards_compatible.py  _cookie_manager.py  _handlers.py  _utils.py  _widgets.py  auth_cookie_manager.py  handlers.py  protocols.py  utils.py  widgets.py
streamlit_login_auth_ui/_legacy/: widgets.py
streamlit_modular_auth/: __init__.py  _cookie_manager.py  _handlers.py  _utils.py  _widgets.py  protocols.py
streamlit_modular_auth/_base/: config.py  login.py  models.py  views.py
streamlit_modular_auth/_core/: config.py  models.py  views.py
streamlit_modular_auth/_legacy/: widgets.py
temp_app/apps/: page1.py
temp_app/pages/: Page1.py
temp_app/pages/base/: config.py
templates/template_app/src/: config.py
templates/template_app_custom/: setup.py
tests/: .coverage  .coveragerc  0_hide_footer.robot  0_hide_menu.robot  0_logout_name_change.robot  1_login_full.robot  1_login_interface.robot  2_login_functionality.robot  2_login_hide_registration.robot  3_login_hide_account_mgmt.robot  DEVELOPMENT_README.md  __app.py  __init__.robot  __test_app.py  __test_auth.py  __test_cookies.py  __test_forgot_password.py  __test_library.py  __test_password_reset.py  __test_user_storage.py  __test_variables.py  _test_app.py  _test_auth.py  _test_backwards_comp.py  _test_cookies.py  _test_forgot_password.py  _test_user_storage.py  _test_variables.py  app.robot  coverage.xml
tests/robot_tests/: 0_custom_forgot_password.robot  0_custom_user_storage.robot  0_hide_footer.robot  0_init_database_storage.robot  0_init_postgres_storage.robot  0_init_sqlite_storage.robot  0_login_hide_account_mgmt.robot  0_logout_name_change.robot  0_multipage_auth.robot  1_login_full.robot  1_login_full_database_storage.robot  1_login_full_json_storage.robot  1_login_full_postgres_storage.robot  1_login_full_sqlite_storage.robot  2_login_hide_registration.robot  3_login_hide_account_mgmt.robot  3_login_hide_registration.robot  4_custom_auth_no_account_mgmt.robot  4_login_hide_account_mgmt.robot  5_custom_auth_no_account_mgmt.robot  5_custom_auth_no_account_mgmt_custom_name.robot  6_custom_user_storage.robot  7_custom_forgot_password copy.robot  7_custom_forgot_password.robot  8_custom_auth_cookies.robot  8_custom_auth_cookies.txt  90_login_full_sqlite_storage.robot  9_multipage_auth.robot  hide_footer.robot  hide_menu.robot  login_name_change.robot  logout_name_change.robot  z_backwards_compatibility.robot
tests/test_unit/: test_protocol.py
tests/tests_app/: _app_0_init.py  _app_1_full.py  _app_1_full_json_storage.py  _app_1_full_sqlite.py  _app_2_hide_registration.py  _app_3_hide_account_mgmt.py  _app_4_custom_auth_hide_account_mgmt.py  _app_5_custom_auth_hide_acc_mgmt_custom_name.py  _app_6_custom_user_storage.py  _app_7_custom_forgot_password.py  _app_8_custom_auth_cookies.py  _app_backwards_comp.py  _app_custom_login_name.py  _app_custom_logout_name.py  _app_hide_footer.py  _app_hide_menu.py
tests/tests_app/multipage_app_admin_page/: Home.py
version2/: db.sqlite3  requirements.txt  streamlit_app.py
version2/fastapi_app/: pyproject.toml
version2/fastapi_app/src/: config.py  main.py  webapps_login.py
version2/fastapi_app/src/database/: __init__.py  db.py
version2/fastapi_app/src/routers/auth/: views.py
version2/fastapi_app/src/routers/maintenance/: models.py  views.py
(+59 files in other folders)
